fix awkward spacing between the quantity and +- buttons

--- a/styles/cart_page.css
+++ b/styles/cart_page.css
@@ -37,7 +37,6 @@
     justify-content: center;
     align-items: center;
     width: 70%;
-    flex-grow: 1;
 }
 
 .shopping-cart-header {
@@ -78,11 +77,6 @@
     margin: 0;
 }
 
-.shopping-cart-item p:first-child {
-    text-align: left;
-    flex: 2;
-}
-
 
 .product-info {
     flex: 2;
@@ -100,9 +94,10 @@
     flex: 1;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 20px;
+    justify-content: space-between;
+    gap: 0;
 }
+
 
 .quantity-square {
     display: flex;
@@ -115,8 +110,8 @@
     border-radius: 50%;
     border-color: lightgray;
     background-color: wheat;
-    line-height: 1;
     margin: 0;
+    padding: 0;
 }
 
 .quantity-square p {
@@ -124,6 +119,8 @@
     padding: 0;
     line-height: 1;
     text-align: center;
+    flex-shrink: 0;
+    width: 20px;
   }
 
 .remove-button {
